src/objects/Program_Period__c.object
<CustomObject>
    <description>Represents a funding or reporting period for a Funding Program</description>
    <label>Program Period</label>
    <nameField>
        <displayFormat>PP - {00000}</displayFormat>
        <label>Program Period ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Casual_Contact_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Casual Contact Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reporting Periods must be related to a Funding Period</inlineHelpText>
        <label>Funding Period</label>
        <referenceTo>Program_Period__c</referenceTo>
        <relationshipLabel>Reporting Periods</relationshipLabel>
        <relationshipName>Program_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Period_Target_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Inherited from parent Funding Program</inlineHelpText>
        <label>Funding Period Target Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Period_Target_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Inherited from the parent Funding Program</inlineHelpText>
        <label>Funding Period Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Program__c</fullName>
        <label>Funding Program</label>
        <referenceTo>Funding_Program__c</referenceTo>
        <relationshipLabel>Program Periods</relationshipLabel>
        <relationshipName>Program_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>De_identified_Sessions_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>De-identified Sessions Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period_Quantity_Grand_Total__c</fullName>
        <formula>Period_Total_Quantity__c + Casual_Contact_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Period Total Quantity + Casual Contact Quantity</inlineHelpText>
        <label>Period Quantity Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Total_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Total_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Type__c</fullName>
        <label>Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Funding</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>